Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-22538

Forest DB crash when device is kept idle for 15 hrs

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.0.0
    • 4.5.1
    • forestdb
    • None
    • Untriaged
    • Unknown

    Description

      Refiled from: https://github.com/couchbase/couchbase-lite-ios/issues/1554

      Idle testing crash.

      Exception Type: EXC_BREAKPOINT (SIGTRAP)
      Exception Codes: 0x0000000000000001, 0x000000018128014c
      Termination Signal: Trace/BPT trap: 5
      Termination Reason: Namespace SIGNAL, Code 0x5
      Terminating Process: exc handler [0]
      Triggered by Thread: 15
      Application Specific Information:
      BUG IN CLIENT OF LIBPLATFORM: os_lock is corrupt
      Abort Cause 313103321
      .
      .
      Thread 15 name: CouchbaseLite
      Thread 15 Crashed:
      0 libsystem_platform.dylib 0x000000018128014c _os_lock_corruption_abort + 36
      1 libsystem_platform.dylib 0x0000000181280128 _os_lock_corruption_abort + 0
      2 xxxxxxxxxx 0x00000001005843f0 update_file_pointers(filemgr*) (filemgr.cc:1431)
      3 xxxxxxxxxx 0x0000000100584100 filemgr_close (filemgr.cc:1516)
      4 xxxxxxxxxx 0x00000001005b7670 _fdb_close (forestdb.cc:7634)
      5 xxxxxxxxxx 0x00000001005b4b04 fdb_check_file_reopen (forestdb.cc:2949)
      6 xxxxxxxxxx 0x00000001005b9120 fdb_get (forestdb.cc:3073)
      7 xxxxxxxxxx 0x0000000100521564 cbforest::KeyStore::read(cbforest::Document&, cbforest::KeyStore::contentOptions) const (KeyStore.cc:80)
      8 xxxxxxxxxx 0x0000000100521468 cbforest::KeyStore::get(cbforest::slice, cbforest::KeyStore::contentOptions) const (KeyStore.cc:61)
      9 xxxxxxxxxx 0x000000010051fe0c c4raw_get (c4Database.cc:502)
      10 xxxxxxxxxx 0x00000001004fe454 -[CBL_ForestDBStorage getLocalDocumentWithID:revisionID:] (CBL_ForestDBStorage.mm:790)
      11 xxxxxxxxxx 0x000000010077d950 -[CBLDatabase existingLocalDocumentWithID:] (CBLDatabase.m:372)
      12 xxxxxxxxxx 0x000000010073fcdc -[CBLRestReplicator getLastSequenceFromLocalCheckpointDocument] (CBLRestReplicator.m:673)
      13 xxxxxxxxxx 0x000000010073fe30 -[CBLRestReplicator fetchRemoteCheckpointDoc] (CBLRestReplicator.m:690)
      14 xxxxxxxxxx 0x000000010073ed54 -[CBLRestReplicator goOnline] (CBLRestReplicator.m:422)
      15 xxxxxxxxxx 0x00000001007416d0 -[CBLRestPuller goOnline] (CBLRestPuller.m:191)
      16 xxxxxxxxxx 0x000000010073e4c4 -[CBLRestReplicator start] (CBLRestReplicator.m:310)
      17 xxxxxxxxxx 0x00000001008140ac -[CBL_Router(Handlers) do_POST_replicate] (CBL_Router+Handlers.m:423)
      18 xxxxxxxxxx 0x000000010080e924 -[CBL_Router route] (CBL_Router.m:491)
      19 xxxxxxxxxx 0x000000010080ee88 -[CBL_Router run] (CBL_Router.m:520)
      20 xxxxxxxxxx 0x000000010081023c __19-[CBL_Router start]_block_invoke (CBL_Router.m:742)
      21 Foundation 0x0000000182cd765c __NSThreadPerformPerform + 340
      22 CoreFoundation 0x000000018219c278 CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION + 24
      23 CoreFoundation 0x000000018219bbc0 __CFRunLoopDoSources0 + 524
      24 CoreFoundation 0x00000001821997c0 __CFRunLoopRun + 804
      25 CoreFoundation 0x00000001820c8048 CFRunLoopRunSpecific + 444
      26 Foundation 0x0000000182bd9a8c -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 304
      27 xxxxxxxxxx 0x000000010073bba8 -[CBL_RunLoopServer runServerThread] (CBL_Server.m:193)
      28 Foundation 0x0000000182cd747c NSThreadstart + 1024
      29 libsystem_pthread.dylib 0x0000000181284850 _pthread_body + 240
      30 libsystem_pthread.dylib 0x0000000181284760 _pthread_body + 0
      31 libsystem_pthread.dylib 0x0000000181281dac thread_start + 4

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            daniel.petersen Daniel Petersen
            daniel.petersen Daniel Petersen
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                PagerDuty