MB-22538 Use file name instead of pointers for old/new file link

* Based on the same logic in
  http://review.couchbase.org/#/c/66318

* Removed prev_file, new_file pointers, and added new member variable
for new file name.

* Both old file name and new file name are used for tracking the
compaction order.

Change-Id: I211e3f6ac237305badae882dcd46cb81af30b01a
Reviewed-on: http://review.couchbase.org/73027
Reviewed-by: Sundararaman Sridharan <sundar@couchbase.com>
Reviewed-by: abhinav dangeti <abhinav@couchbase.com>
Tested-by: Jung-Sang Ahn <jungsang.ahn@gmail.com>